deployment/k8-cloud/k8-deployment.yaml
---
# Source: balance-calculation/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balance-calculation
  labels:
    helm.sh/chart: balance-calculation-0.1.0
    app.kubernetes.io/name: balance-calculation
    app.kubernetes.io/instance: balance-calculation
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: balance-calculation
    app.kubernetes.io/instance: balance-calculation
---
# Source: balance-calculation/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-calculation
  labels:
    helm.sh/chart: balance-calculation-0.1.0
    app.kubernetes.io/name: balance-calculation
    app.kubernetes.io/instance: balance-calculation
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: balance-calculation
      app.kubernetes.io/instance: balance-calculation
  template:
    metadata:
      labels:
        helm.sh/chart: balance-calculation-0.1.0
        app.kubernetes.io/name: balance-calculation
        app.kubernetes.io/instance: balance-calculation
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: balance-calculation
      securityContext:
        {}
      containers:
        - name: balance-calculation
          securityContext:
            {}
          image: "ecr-repo/balance-calculation:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpresions:
              - key: app.kubernetes.io/name
                operator: In
                values: balance-calculation
            topologyKey: failure-domain.beta.kubernates.io/zone
---
# Source: balance-calculation/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: balance-calculation
  labels:
    helm.sh/chart: balance-calculation-0.1.0
    app.kubernetes.io/name: balance-calculation
    app.kubernetes.io/instance: balance-calculation
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: balance-calculation
                port:
                  number: 80
---
# Source: balance-calculation/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "balance-calculation-test-connection"
  labels:
    helm.sh/chart: balance-calculation-0.1.0
    app.kubernetes.io/name: balance-calculation
    app.kubernetes.io/instance: balance-calculation
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['balance-calculation:80']
  restartPolicy: Never
